--- a/taskpay-frontend/src/styles/Login.css
+++ b/taskpay-frontend/src/styles/Login.css
@@ -1,8 +1,12 @@
 .login-left-container{
     background-color: #2A2A2A;
-    padding-top: 170px;
-    
+    display: flex;
+    flex-direction: column;
+    justify-content: center; 
+    align-items: center; 
+
 }
+
 .login-form-container{
     width: 530px;
     height: 330px;
@@ -18,7 +22,7 @@
 
 .form-group {
     display: flex;
-    flex-direction: column; /* Stacks children (label and input) vertically */
+    flex-direction: column;
     gap: 10px;
 }
 .form-group-input{
