--- a/taskpay-frontend/src/styles/ApplicantDashboard.css
+++ b/taskpay-frontend/src/styles/ApplicantDashboard.css
@@ -79,6 +79,9 @@
     background-color: #f8f8ff;
     width: 810px;
     height: 570px;
+    padding: 20px;
+    overflow-y: auto;
+    max-height: 600px;
 } 
 
 
