--- a/taskpay-frontend/src/styles/ApplicantEditProfile.css
+++ b/taskpay-frontend/src/styles/ApplicantEditProfile.css
@@ -220,7 +220,7 @@ textarea {
 
 .browse-files-button {
   background-color: #eee;
-  color: #555;
+  color: black;
   border: 1px solid #ddd;
   padding: 8px 15px;
   border-radius: 5px;
