client dashboard almost complete. remaining bug is the missing duration field in create task

--- a/taskpay-frontend/src/components/Card/taskApplicationStatus/taskApplicationStatus.css
+++ b/taskpay-frontend/src/components/Card/taskApplicationStatus/taskApplicationStatus.css
@@ -123,3 +123,8 @@
     color: white;
     border: none;
 }
+
+.status-inprogress {
+    background-color: #F0F4F7; /* Ash grey blue */
+    color: #607D8B;
+}
